--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "twitter-api-proxy",
   "version": "1.0.0",
   "description": "Proxy server for Twitter API to bypass CORS",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
